[package]
name = "bigtable_rs"
description = "A very simple Google Bigtable client lib in Rust"
version = "0.2.6"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/liufuyang/bigtable_rs/"
keywords = ["bigtable"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gzip = ["tonic/gzip"]

[dependencies]
# tonic, prost, and prost-types are need for build generated rs files
http = "0.2"
tonic = { version = "0.11", features = ["tls", "transport"] }
tower = { version = "0.4" }
prost = "0.12"
prost-wkt-types = "0.5"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["base64"] }
# end of above part
gcp_auth = "0.10"
log = "0.4"
thiserror = "1"

[dev-dependencies]
# tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
env_logger = "0.10.0"
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
# seems unused
prost-types = "0.12"
prost-wkt = "0.5"

[build-dependencies]
tonic-build = { version = "0.11", features = ["cleanup-markdown"]}
prost-build = "0.12"
prost-wkt-build = "0.5"
